--- a/v1.1/n3_synApps/Dockerfile
+++ b/v1.1/n3_synApps/Dockerfile
@@ -1,7 +1,7 @@
 FROM  prjemian/epics-base-7.0.4.1
 LABEL version="1.1.0" \
       maintainer="prjemian <prjemian@gmail.com>" \
-      lastupdate="2021-01-21" \
+      lastupdate="2021-01-30" \
       Description="see docs at https://github.com/prjemian/epics-docker/blob/master/n3_synApps/README.md"
 USER  root
 WORKDIR /home
@@ -38,9 +38,9 @@ ENV PATH="${PATH}:${EPICS_ROOT}/bin/${EPICS_HOST_ARCH}"
 ENV SYNAPPS="${APP_ROOT}/synApps"
 ENV SUPPORT="${SYNAPPS}/support"
 ENV PATH="${PATH}:${SUPPORT}/utils"
-ENV AD=${SUPPORT}/areaDetector-master
+# ENV AD=${SUPPORT}/areaDetector-master
 ENV MOTOR=${SUPPORT}/motor-master
-ENV XXX=${SUPPORT}/xxx-master
+ENV XXX=${SUPPORT}/xxx-R6-2
 
 # a directory for EPICS data (such as written from area detector IOCs)
 RUN mkdir /data
@@ -69,10 +69,8 @@ RUN echo # end ------------------- assemble_synApps.sh -------------------
 RUN echo # start ------------------- build synApps -------------------
 WORKDIR ${SUPPORT}
 RUN pwd && ls -lAFgh
-# RUN make release rebuild 2>&1 | tee build.log
-# RUN echo "# --- Building XXX IOC ---" 2>&1 | tee -a build.log
-# RUN make -C ${XXX}/iocBoot/iocxxx/ 2>&1 | tee -a build.log
-# RUN echo # end ------------------- build synApps -------------------
+RUN make -j4 release rebuild 2>&1 | tee build.log
+RUN echo "# --- Building XXX IOC ---" 2>&1 | tee -a build.log
+RUN make -C ${XXX}/iocBoot/iocxxx/ 2>&1 | tee -a build.log
+RUN echo # end ------------------- build synApps -------------------
 
-# # WORKDIR ${SYNAPPS}
-# # RUN ls -lAFgh
