MNT #15 rebuild EPICS base

--- a/v1.1/n2_epics_base/Dockerfile
+++ b/v1.1/n2_epics_base/Dockerfile
@@ -1,7 +1,7 @@
 FROM  prjemian/os_only-1.1
 LABEL version="1.1.0" \
       maintainer="prjemian <prjemian@gmail.com>" \
-      lastupdate="2021-01-20"
+      lastupdate="2021-01-30"
 USER  root
 WORKDIR /home
 
@@ -19,6 +19,18 @@ ENV EPICS_BASE_DIR_NAME=base-R7.0.4.1
 ENV EPICS_HOST_ARCH=linux-x86_64
 ENV EPICS_ROOT="${APP_ROOT}/${EPICS_BASE_DIR_NAME}"
 ENV PATH="${PATH}:${EPICS_ROOT}/bin/${EPICS_HOST_ARCH}"
+
+WORKDIR /home
+RUN pwd && ls -lAFgh
+RUN echo # start ------------------- OS update -------------------
+RUN \
+    apt-get update  -y && \
+    apt-get install -y  \
+       python3-pip \
+       && \
+    pip3 install supervisor
+RUN echo # end ------------------- OS update -------------------
+
 
 WORKDIR ${APP_ROOT}
 ADD https://epics.anl.gov/download/base/${EPICS_BASE_NAME}.tar.gz ./
@@ -38,3 +50,11 @@ RUN make clean  2>&1 | tee -a build.log
 # see https://docs.epics-controls.org/projects/pva2pva/en/latest/doxygen/
 #WORKDIR ${EPICS_ROOT}/modules
 #RUN make -j4
+
+WORKDIR /tmp
+RUN pwd && ls
+COPY ioc_files/* /tmp/softIoc_base_demo/
+CMD ["/bin/bash"]
+
+WORKDIR ${EPICS_ROOT}
+RUN pwd && ls
