--- a/v1.1/n4_areaDetector/Dockerfile
+++ b/v1.1/n4_areaDetector/Dockerfile
@@ -53,6 +53,12 @@ ENV ADCORE_HASH=9321f2a
 ENV ADSUPPORT_HASH=5c549858
 ENV ADSIMDETECTOR_HASH=d24fa04
 ENV AD_PVADRIVER_HASH=1f51a94
+# TODO:
+# ADURL
+# ADViewers
+# ffmpegServer
+# NDDriverStdArrays
+# ADPluginCentroids
 
 WORKDIR ${AREA_DETECTOR}
 RUN pwd && ls -lAFgh
