MNT #16 use motor R7-2-2

--- a/v1.1/n3_synApps/Dockerfile
+++ b/v1.1/n3_synApps/Dockerfile
@@ -36,7 +36,7 @@ ENV PATH="${PATH}:${EPICS_ROOT}/bin/${EPICS_HOST_ARCH}"
 
 # ============ EPICS synApps ============
 # ENV MOTOR_HASH=master
-ENV MOTOR_HASH=R7-2-1-bugfix
+ENV MOTOR_HASH=R7-2-2
 ENV SYNAPPS="${APP_ROOT}/synApps"
 ENV SUPPORT="${SYNAPPS}/support"
 ENV PATH="${PATH}:${SUPPORT}/utils"
