--- a/v1.1/Makefile
+++ b/v1.1/Makefile
@@ -1,10 +1,11 @@
 # build (or push) subdirectories
 
 build ::
-	make -C n1_os_only      $@
-	make -C n2_epics_base   $@
-	make -C n3_synApps      $@
-	make -C n4_areaDetector $@
+	make -C n1_os_only      	$@
+	make -C n2_epics_base   	$@
+	make -C n3_synApps      	$@
+	make -C n4_areaDetector 	$@
+	make -C n5_custom_synApps	$@
 
 # push ::
 # 	# make -C n1_os_only      $@
