--- a/v1.1/n5_custom_synApps/Dockerfile
+++ b/v1.1/n5_custom_synApps/Dockerfile
@@ -1,18 +1,16 @@
 FROM  prjemian/synapps-6.2
 LABEL version="1.1.0" \
-      maintainer="prjemian <prjemian@gmail.com>" \
-      lastupdate="2021-02-03" \
-      Description="see docs at https://github.com/prjemian/epics-docker/blob/master/n3_synApps/README.md"
+      maintainer="prjemian <prjemian@gmail.com>"
+      # lastupdate="2021-02-03" \
+      # Description="see docs at https://github.com/prjemian/epics-docker/blob/master/n3_synApps/README.md"
 USER  root
 WORKDIR /home
 RUN pwd && ls -lAFgh
 
-COPY ioc_files/copy_screens.sh /opt
-RUN bash /opt/copy_screens.sh ${SUPPORT} ${SUPPORT}/screens
-
 COPY ioc_files/general_purpose.db ${IOCXXX}/substitutions
 COPY ioc_files/edit_xxx.sh /opt
 RUN /opt/edit_xxx.sh && pwd
+RUN bash /opt/copy_screens.sh ${SUPPORT} /opt/screens
 
 # archive the template IOC, for making new XXX IOCs
 WORKDIR ${SUPPORT}
