--- a/v1.1/Makefile
+++ b/v1.1/Makefile
@@ -8,18 +8,10 @@ build ::
 	make -C n5_custom_synApps	    $@
 	make -C n6_custom_areaDetector	$@
 
-# push ::
-# 	# make -C n1_os_only      $@
-# 	make -C n2_epics_base   $@
-# 	make -C n3_synApps      $@
-# 	# make -C n4_areaDetector $@
-
-# portainer ::
-# 	docker run \
-# 		-d \
-# 		-p 8000:8000 \
-# 		-p 9000:9000 \
-# 		-v /var/run/docker.sock:/var/run/docker.sock \
-# 		-v portainer_data:/data portainer/portainer
-
-# 	firefox http://localhost:9000 &
+push ::
+	make -C n1_os_only      	    $@
+	make -C n2_epics_base   	    $@
+	make -C n3_synApps      	    $@
+	make -C n4_areaDetector 	    $@
+	make -C n5_custom_synApps	    $@
+	make -C n6_custom_areaDetector	$@
