--- a/v1.1/n3_synApps/Dockerfile
+++ b/v1.1/n3_synApps/Dockerfile
@@ -1,8 +1,7 @@
 FROM  prjemian/epics-base-7.0.4.1
 LABEL version="1.1.0" \
-      maintainer="prjemian <prjemian@gmail.com>"
-    #   lastupdate="2021-02-03" \
-    #   Description="see docs at https://github.com/prjemian/epics-docker/blob/master/n3_synApps/README.md"
+      maintainer="prjemian <prjemian@gmail.com>" \
+      Description="source: https://github.com/prjemian/epics-docker/"
 USER  root
 WORKDIR /home
 RUN pwd && ls -lAFgh
@@ -80,7 +79,7 @@ RUN echo # end ------------------- build synApps -------------------
 
 # copy all the MEDM/CSSBOY/caQtDM/... screens to /opt/screens
 COPY ioc_files/copy_screens.sh /opt
-RUN bash /opt/copy_screens.sh ${SUPPORT} /opt/screens | tee -a copy_screens.log
+RUN bash /opt/copy_screens.sh ${SUPPORT} /opt/screens | tee -a /opt/copy_screens.log
 
 
 CMD ["/bin/bash"]
