--- a/v1.1/n1_os_only/Dockerfile
+++ b/v1.1/n1_os_only/Dockerfile
@@ -1,14 +1,15 @@
 FROM  ubuntu:latest
 LABEL version="1.1.0" \
       maintainer="prjemian <prjemian@gmail.com>" \
-      lastupdate="2021-02-03"
+      Description="source: https://github.com/prjemian/epics-docker/"
+    #   lastupdate="2021-02-03" \
 USER  root
 WORKDIR /home
 
 # Install necessary libraries from offical repo
-RUN apt-get update  -y && \
-    apt-get upgrade -y && \
-    apt-get install -y  \
+RUN DEBIAN_FRONTEND=noninteractive apt-get update  -y && \
+    DEBIAN_FRONTEND=noninteractive apt-get upgrade -y && \
+    DEBIAN_FRONTEND=noninteractive apt-get install -y  \
         apt-utils \
         build-essential  \
         libreadline-dev  \
@@ -22,3 +23,5 @@ RUN apt-get update  -y && \
 ENV APP_ROOT="/opt"
 # for use with `crontab -e`
 ENV EDITOR="nano"
+# only show last few subdirs before console prompt
+ENV PROMPT_DIRTRIM=3
