--- a/v1.1/n2_epics_base/Dockerfile
+++ b/v1.1/n2_epics_base/Dockerfile
@@ -1,7 +1,7 @@
 FROM  prjemian/os_only-1.1
 LABEL version="1.1.0" \
       maintainer="prjemian <prjemian@gmail.com>" \
-      lastupdate="2021-02-03"
+      Description="source: https://github.com/prjemian/epics-docker/"
 USER  root
 WORKDIR /home
 
