--- a/v1.1/n6_custom_areaDetector/Dockerfile
+++ b/v1.1/n6_custom_areaDetector/Dockerfile
@@ -1,15 +1,12 @@
 FROM  prjemian/synapps-6.2-ad-3.10
 LABEL version="1.1.0" \
-      maintainer="prjemian <prjemian@gmail.com>"
-      # lastupdate="2021-02-03" \
-      # Description="see docs at https://github.com/prjemian/epics-docker/blob/master/n4_areaDetector/README.md"
+      maintainer="prjemian <prjemian@gmail.com>" \
+      Description="source: https://github.com/prjemian/epics-docker/"
 USER  root
 WORKDIR /home
 RUN pwd && ls -lAFgh
 
-# TODO: more
-
-RUN bash /opt/copy_screens.sh ${SUPPORT} /opt/screens | tee -a copy_screens.log
-
 COPY ioc_files/customize_ad.sh /opt
 RUN /opt/customize_ad.sh 2>&1 | tee /opt/customize_ad.log
+
+RUN bash /opt/copy_screens.sh ${SUPPORT} /opt/screens | tee -a /opt/copy_screens.log
