--- a/v1.1/n2_epics_base/Dockerfile
+++ b/v1.1/n2_epics_base/Dockerfile
@@ -24,8 +24,8 @@ WORKDIR /home
 RUN pwd && ls -lAFgh
 RUN echo # start ------------------- OS update -------------------
 RUN \
-    apt-get update  -y && \
-    apt-get install -y  \
+    DEBIAN_FRONTEND=noninteractive apt-get update  -y && \
+    DEBIAN_FRONTEND=noninteractive apt-get install -y  \
        python3-pip \
        && \
     pip3 install supervisor
