MNT #54 capture more build logs

--- a/v2.0/Dockerfile
+++ b/v2.0/Dockerfile
@@ -8,30 +8,33 @@ USER  root
 RUN echo "# -------------------------------- customize command shell"
 CMD ["/bin/bash"]
 WORKDIR /home
+ENV APP_ROOT="/opt"
+ENV RESOURCES="${APP_ROOT}/resources"
+ENV LOG_DIR="${APP_ROOT}/logs"
 RUN \
     touch ~/.bashrc ~/.bash_aliases \
     && echo "if [ -f ~/.bash_aliases ]; then" >> ~/.bashrc \
     && echo "    . ~/.bash_aliases" >> ~/.bashrc \
     && echo "fi" >> ~/.bashrc \
+    && echo "# file: ~/.bash_aliases" >> ~/.bash_aliases \
     && echo "export LS_OPTIONS='--color=auto'" >> ~/.bash_aliases \
     && echo "export EDITOR=nano" >> ~/.bash_aliases \
+    && echo "export PATH=${PATH}:${HOME}/bin" >> ~/.bash_aliases \
     && echo "export PROMPT_DIRTRIM=3" >> ~/.bash_aliases \
     && echo "alias ls='ls --color=auto'" >> ~/.bash_aliases \
-    && echo "alias ll='ls -lAFgh'" >> ~/.bash_aliases
+    && echo "alias ll='ls -lAFgh'" >> ~/.bash_aliases \
+    && mkdir ~/bin "${LOG_DIR}"
 
 
-RUN echo "# -------------------------------- start OS update"
+RUN echo "# -------------------------------- start OS update" 2>&1 | tee -a "${LOG_DIR}/dockerfile.log"
 # Build EPICS software here
-ENV APP_ROOT="/opt"
-ENV RESOURCES="${APP_ROOT}/resources"
-ENV LOG_DIR="${APP_ROOT}/logs"
 RUN \
-    mkdir ${LOG_DIR} \
-    && echo "export APP_ROOT=${APP_ROOT}" >> ~/.bash_aliases \
+    echo "export APP_ROOT=${APP_ROOT}" >> ~/.bash_aliases \
     && echo "export RESOURCES=${RESOURCES}" >> ~/.bash_aliases \
     && echo "export LOG_DIR=${LOG_DIR}" >> ~/.bash_aliases
 
 # sysAdmin work: Install necessary libraries from offical repo
+RUN echo "# update OS" 2>&1 | tee -a "${LOG_DIR}/dockerfile.log"
 RUN DEBIAN_FRONTEND=noninteractive apt-get update  -y \
     && DEBIAN_FRONTEND=noninteractive apt-get upgrade -y \
     && DEBIAN_FRONTEND=noninteractive apt-get install -y  \
@@ -52,40 +55,40 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get update  -y \
         screen \
         vim \
         wget \
-        \
-    && rm -rf /var/lib/apt/lists/*
+        2>&1 | tee -a "${LOG_DIR}/dockerfile.log"
+RUN rm -rf /var/lib/apt/lists/*
 
 # for use with `crontab -e`
 ENV EDITOR="nano"
 
 # only show last few subdirs before console prompt
 ENV PROMPT_DIRTRIM=3
-RUN echo "# -------------------------------- end OS install"
+RUN echo "# -------------------------------- end OS install" 2>&1 | tee -a "${LOG_DIR}/dockerfile.log"
 
-RUN echo "# -------------------------------- start EPICS base"
+RUN echo "# -------------------------------- start EPICS base" 2>&1 | tee -a "${LOG_DIR}/dockerfile.log"
 COPY ./resources/epics_base.sh "${RESOURCES}/"
-RUN "${RESOURCES}/epics_base.sh"
-RUN echo "# -------------------------------- end EPICS base"
+RUN "${RESOURCES}/epics_base.sh" 2>&1 | tee -a "${LOG_DIR}/dockerfile.log"
+RUN echo "# -------------------------------- end EPICS base" 2>&1 | tee -a "${LOG_DIR}/dockerfile.log"
 
-RUN echo "# -------------------------------- start EPICS synApps"
-COPY ./resources/epics_synapps.sh "${RESOURCES}/"
-COPY ./resources/edit_assemble_synApps.sh "${RESOURCES}/"
-RUN "${RESOURCES}/epics_synapps.sh"
-RUN echo "# -------------------------------- end EPICS synApps"
-
-RUN echo "# -------------------------------- start GUI screens"
+RUN echo "# -------------------------------- start script tools" 2>&1 | tee -a "${LOG_DIR}/dockerfile.log"
 # These scripts will be used by the scripts which create custom IOCs
 COPY ./resources/copy_screens.sh "${RESOURCES}/"
 COPY ./resources/modify_adl_in_ui_files.sh "${RESOURCES}/"
-RUN echo "# -------------------------------- end GUI screens"
+RUN echo "# -------------------------------- end script tools" 2>&1 | tee -a "${LOG_DIR}/dockerfile.log"
 
-RUN echo "# -------------------------------- start create GP IOC"
+RUN echo "# -------------------------------- start EPICS synApps" 2>&1 | tee -a "${LOG_DIR}/dockerfile.log"
+COPY ./resources/epics_synapps.sh "${RESOURCES}/"
+COPY ./resources/edit_assemble_synApps.sh "${RESOURCES}/"
+RUN "${RESOURCES}/epics_synapps.sh" 2>&1 | tee -a "${LOG_DIR}/dockerfile.log"
+RUN echo "# -------------------------------- end EPICS synApps" 2>&1 | tee -a "${LOG_DIR}/dockerfile.log"
+
+RUN echo "# -------------------------------- start create custom GP IOC" 2>&1 | tee -a "${LOG_DIR}/dockerfile.log"
 COPY ./resources/create_gp_ioc.sh "${RESOURCES}/"
 COPY ./resources/general_purpose.db /tmp/
+COPY ./resources/gp_screens /tmp/
 RUN "${RESOURCES}/create_gp_ioc.sh" 2>&1 | tee -a "${LOG_DIR}/dockerfile.log"
-RUN echo "# -------------------------------- end create GP IOC"
+RUN echo "# -------------------------------- end create custom GP IOC" 2>&1 | tee -a "${LOG_DIR}/dockerfile.log"
 
-# TODO: add custom support for custom (GP) IOC
 # TODO: add custom support for custom ADSimDetector IOC
 # TODO: add custom support for custom pvaDriver IOC
 # TODO: add custom support for custom ADURL IOC
